fix channels z-index

--- a/src/css/program.sass
+++ b/src/css/program.sass
@@ -23,7 +23,7 @@ $board-mobile-fontsize: 7.5pt;
     .channels
         position: absolute;
         overflow: hidden;
-        z-index: 5;
+        z-index: 4;
         .item
             position: absolute;
             font-weight: bold;
